--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "hunterdon-discord-bot",
+  "version": "1.0.0",
+  "description": "Hunterdon Discord bot",
+  "main": "index.cjs",
+  "scripts": {
+    "start": "node index.cjs"
+  },
   "dependencies": {
-    "discord.js": "^14.15.3",
-    "express": "^4.19.2"
+    "discord.js": "^14.11.0",
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2"
   }
 }
 
