--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "hunterdon-discord-bot",
   "version": "1.0.0",
-  "description": "Hunterdon Discord bot",
   "main": "index.cjs",
   "type": "commonjs",
   "scripts": {
     "start": "node index.cjs"
   },
   "dependencies": {
-    "discord.js": "^14.11.0",
     "express": "^4.18.2",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "discord.js": "^15.1.0"
   }
 }
 
